# pytest-result-sender

./: .flake8  .gitignore  .pdm-python  aa.py  pyproject.toml  pytest.ini  pyvenv.cfg  w.md
src/pytest_result_sender/: plugin.py
tests/: test_abc.py  test_ini.py
