[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "wyning24", email = "username@example.com"},
]
dependencies = ["pytest>=8.3.5", "requests>=2.32.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"


[tool.pdm.build]
package-dir = "src"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | venv
  | buck-out
  | build
  | dist
)/
'''


[tool.pdm.scripts]
test = "pytest"
check = { composite =[
    "isort .",
    "black .",
    "flake8 ."

]}














[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.2.0",
]
